--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,21 @@
+body {
+  font-family: Verdana;
+}
+
 img {
   width: 100%;
 }
 
 .sidebar {
  width: 300px;
+ padding: 10px;
+ border: solid black;
+ border-width: 2px;
+ background-color: lightblue;
+ box-sizing: border-box;
  float: left;
- border: 2px black; 
 }
 
 .my-projects {
   width: 60%;
-  float: right;
 }
