add more projects as well as links to them and styling using cascading and span tags

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,5 +17,14 @@ img {
 }
 
 .my-projects {
-  
+ width: 65%;
+ float: right;
+}
+
+.repo li a {
+  font-style: italic;
+}
+
+.live li a {
+  font-style: italic;
 }
