--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,17 @@ body {
 
 h1 {
   font-weight: bold;
-  padding: 10px;
+  padding: 15px;
+}
+
+h2 {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 img {
   width: 100%;
+  padding: 5px;
 }
 
 .sidebar {
